Ignorados alguns files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Bike sharing WIN/Bike sharing WIN/Debug/vc120.idb
 *.log
 *.suo
 *.sdf
+Bike sharing WIN/Bike sharing WIN.v12.suo
+Bike sharing WIN/Bike sharing WIN.sdf
+Bike sharing WIN/Bike sharing WIN.v12.suo
