--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Bike sharing WIN/Bike sharing WIN/Debug/vc120.idb
 Bike sharing WIN/Bike sharing WIN.v12.suo
 Bike sharing WIN/Bike sharing WIN.sdf
 Bike sharing WIN/Bike sharing WIN.v12.suo
+Bike sharing WIN/Bike sharing WIN.v12.suo
