Corrigido o erro estúpido do ED

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Bike sharing WIN/Bike sharing WIN.v12.suo
 Bike sharing WIN/Bike sharing WIN.sdf
 Bike sharing WIN/Bike sharing WIN.v12.suo
 Bike sharing WIN/Bike sharing WIN.v12.suo
+Bike sharing WIN/Bike sharing WIN.v12.suo
