--- a/Bike sharing WIN/Bike sharing WIN/Bike sharing WIN.vcxproj
+++ b/Bike sharing WIN/Bike sharing WIN/Bike sharing WIN.vcxproj
@@ -10,6 +10,28 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\bike\src\Bicicleta.cpp" />
+    <ClCompile Include="..\..\bike\src\Data.cpp" />
+    <ClCompile Include="..\..\bike\src\Empresa.cpp" />
+    <ClCompile Include="..\..\bike\src\main.cpp" />
+    <ClCompile Include="..\..\bike\src\PostoServico.cpp" />
+    <ClCompile Include="..\..\bike\src\Rede.cpp" />
+    <ClCompile Include="..\..\bike\src\Registo.cpp" />
+    <ClCompile Include="..\..\bike\src\Test.cpp" />
+    <ClCompile Include="..\..\bike\src\Tools.cpp" />
+    <ClCompile Include="..\..\bike\src\Utilizador.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\bike\src\Bicicleta.h" />
+    <ClInclude Include="..\..\bike\src\Data.h" />
+    <ClInclude Include="..\..\bike\src\Empresa.h" />
+    <ClInclude Include="..\..\bike\src\PostoServico.h" />
+    <ClInclude Include="..\..\bike\src\Rede.h" />
+    <ClInclude Include="..\..\bike\src\Registo.h" />
+    <ClInclude Include="..\..\bike\src\Tools.h" />
+    <ClInclude Include="..\..\bike\src\Utilizador.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6824E23B-F57E-48F8-8CE3-D30B486A356E}</ProjectGuid>
     <RootNamespace>BikesharingWIN</RootNamespace>
@@ -63,24 +85,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\bike\src\Bicicleta.cpp" />
-    <ClCompile Include="..\..\bike\src\Data.cpp" />
-    <ClCompile Include="..\..\bike\src\main.cpp" />
-    <ClCompile Include="..\..\bike\src\Rede.cpp" />
-    <ClCompile Include="..\..\bike\src\Test.cpp" />
-    <ClCompile Include="..\..\bike\src\Utilizador.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\bike\src\Bicicleta.h" />
-    <ClInclude Include="..\..\bike\src\Data.h" />
-    <ClInclude Include="..\..\bike\src\Empresa.h" />
-    <ClInclude Include="..\..\bike\src\PostoServico.h" />
-    <ClInclude Include="..\..\bike\src\Rede.h" />
-    <ClInclude Include="..\..\bike\src\Registo.h" />
-    <ClInclude Include="..\..\bike\src\Tools.h" />
-    <ClInclude Include="..\..\bike\src\Utilizador.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
